--- a/index.html
+++ b/index.html
@@ -3,142 +3,116 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/c02b33a3c8.js" crossorigin="anonymous"></script>
-	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <title>Cione Blog</title>
+    <title>Hướng dẫn nấu ăn</title>
 </head>
-<body>
-    <div class="wrapper">
-        <div class="header">
-            <a class="left" href="#">
-                <img src="img/logo.png" alt="Logo" class="logo">
-                <p>Blog học lập trình trực tuyến</p>
-            </a>
-            <ul>
-                <li><a href="#">MÔ HÌNH "LEARNING CARE"</a></li>
-                <li><a href="#">ĐIỀU KHOẢN SỬ DỤNG</a></li>
-                <li><a href="#">ĐĂNG KÝ HỌC</a></li>
-            </ul>
-        </div>
-        <nav>
-            <div class="container">
+<body style="color: white;background-image: linear-gradient(45deg
+    , rgba(38,80,119,0.5), rgba(45,95,93,0.75)), url(bgCaloc.jpg);
+    background-position: center;background-attachment: fixed;">
+    <div class="content" style="width: 700px;margin: 0 auto;background-color: rgba(0, 0, 0, .4);border-radius: 10px;">
+        <h1 style="text-align: center;color: #e67e22;">CANH CHUA CÁ LÓC</h1>
+        <img src="Caloc.jpg" alt="Canhchua" width="350px" style="border: 1px solid #c2e1fd;margin-left: 20px;">
+        <ul type="black-circle">
+            <li>Khẩu phần: 4 người</li>
+            <li>Thời gian chuẩn bị: 25 phút</li>
+            <li>Thời gian nấu ăn: 20 phút</li>
+            <li>Giá thành: 100.000 đồng</li>
+        </ul>
+        <hr>
+        <h2 style="color: #e67e22;"><u>NGUYÊN LIỆU</u></h2>
+        <ul type="circle">
+            <li>Cá lóc: 1 con khoản 100-800g.</li>
+            <li>Thơm: &#188; quả.</li>
+            <li>Cà chua: 2 quả.</li>
+            <li>Đậu bắp: 5 quả.</li>
+            <li>Dọc mùng: 2 nhánh.</li>
+            <li>Giá đậu: 100g.</li>
+            <li>Me chua chín: 50g.</li>
+            <li>Rau thơm nấu canh chua gồm: hành lá, rau ngổ.</li>
+            <li>Gia vị: hành khô, tỏi, muối, hạt nêm, bột ngọt, đường, nước mắm, dầu ăn.</li>
+        </ul>
+        <hr>
+        <h2 style="color: #e67e22;"><u>THỰC HIỆN</u></h2>
+        <ol>
+            <li><b>Sơ chế nguyên liệu:</b>
                 <ul>
-                    <li><a href="#">CIONE BLOG</a></li>
-                    <li><a href="#">HTML</a></li>
-                    <li><a href="#">CSS</a></li>
-                    <li><a href="#">JAVASCRIPT</a></li>
+                    <li><i>Hành khô, tỏi:</i> làm sạch băm nhuyễn.</li>
+                    <li><i>Cá lóc: </i>làm sạch, thái lát vừa ăn, cứa nhẹ trên mỗi lát để cá thấm gia vị. 
+                    Ướp cá với &#189; thìa hành tỏi băm nhuyễn, 1 thìa hạt nêm, &#189; thìa nước mắm, &#189; 
+                    thìa bột ngọt, &#189; thìa dầu ăn, &#189; thìa tiêu để khoảng 15-20 phút.</li>
+                    <li><i>Khóm, đậu bắp: </i>làm sạch, cắt lát xéo dài.</li>
+                    <li><i>Cà chua: </i>bổ cau</li>
+                    <li><i>Bạc hà: </i>tước vỏ, cắt mỏng, bóp qua với một chút muối, rửa sạch, chần nhẹ với nước sôi, để ráo.</li>
+                    <li><i>Giá đậu: </i>rửa sạch, để riêng.</li>
+                    <li><i>Rau thơm: </i>rửa sạch, thái mịn</li>
+                    <li><i>Me chua chín: </i>ngâm với nước ấm, bỏ hạt</li>
                 </ul>
-                <input type="text" placeholder="Từ khóa" class="search-box">
+            </li>
+            <li><b>Thực hiện nấu:</b>
+                <ul>
+                    <li>Phi thơm hành tỏi băm nhuyễn với dầu ăn.</li>
+                    <li>Cho cá vào đảo nhẹ rồi cho nước vào nấu canh, cho thêm nước me chua và thơm vào(Có thể cho thêm nước xương
+                    hầm để canh thêm ngọt).</li>
+                    <li>Đến khi nước sôi, dùng thìa lớn vớt hết bọt phía trên để nước canh được trong.</li>
+                    <li>Nước sôi khoảng 3 phút, cá sắp chín tới, cho cà chua, đậu bắp, dọc mùng, giá đậu vào.</li>
+                    <li>Nêm thêm &#188; thìa muối, &#189; thìa đường, 1 thìa hạt nêm, &#188; thìa bột ngọt sao cho vừa ăn.</li>
+                    <li>Khi thấy món canh đã chín tới, tắt bếp, cho rau thơm vào.</li>
+                </ul>
+            </li>
+        </ol>
+        <p>&emsp;Đây là công thức nấu món canh chua do <a href="https://www.google.com/" style="color: #6b95bd;">Google</a> tổng hợp. Công thức nấu đã được kiểm nghiệm và yêu thích bởi nhiều người. 
+        Chúc các bạn chế biến thành công và ăn ngon miệng.</p>
+        <hr>
+        <h2 style="color: #e67e22;"><u>PHẢN HỒI CỦA NGƯỜI DÙNG</u></h2>
+        <style>
+            .coment{
+                margin: 0 20px;
+                border: 1px solid white;
+                border-radius: 20px;
+            }
+            .coment .nd{
+                margin: 5px 10px;
+            }
+            .link{
+                color:  #6b95bd;
+            }
+            .lienket{
+                margin-left: 30px;
+                padding-bottom: 30px;
+            }
+        </style>
+        <div class="coment">
+            <div class="nd">
+            <p>Q: Thế nào là "bổ cau"?</p>
+            <p>A: Là bổ ra giống như bổ trái cau: bổ trái cà theo chiều từ trên cuống xuống làm 4,6 hay 8 phần tùy kích thước quả cà và ý thích</p>
+            <br>
+            <i style="color: #6b95bd"><b>- Emily.</b></i>
             </div>
-        </nav>
-        <div class="container-section">
-            <div class="content">
-                <div class="posts">
-                    <article>
-                        <header>
-                            <h1><a href="#">Cách nhúng một đối tượng bất kỳ vào trang web</a></h1>
-                            <ul>
-                                <li>
-                                    <i class="fas fa-user"></i>
-                                    <a href="#" class="author">Kudo Nguyễn</a>
-                                </li>
-                                <li>
-                                    <i class="far fa-calendar-alt"></i>
-                                    <a href="#" class="time">8 Mar, 2016</a>
-                                </li>
-                                <li>
-                                    <i class="fas fa-folder-open"></i>
-                                    <a href="#" class="languge">HTML</a>
-                                </li>
-                            </ul>
-                        </header>
-                        <section>
-                            <img src="img/object-embed.png" alt="">
-                            <p class="text">Giới thiệu Có thể chúng ta đã biết cách trình bày văn bản với đầy đủ định dạng với HTML5
-                                từ gạch chân, gạch ngang, in đậm, in nghiêng với đủ thể loại màu sắc, tuy nhiên với 
-                                HTML đó chưa phải là tất cả. Trong tutorial này, chúng ta
-                            </p>
-                            <a href="#" class="btn">Xem tiếp<i class="fas fa-share"></i></a>
-                        </section>
-                        <footer>
-                            <p>Chia sẻ trên: 
-                                <a href="#">
-                                    <i class="fab fa-facebook-square"></i>
-                                    Facebook
-                                </a>
-                            </p>
-                            
-                        </footer>
-                    </article>
-                    <article>
-                        <header>
-                            <h1><a href="#">Hiển thị ký tự đặc biệt trên trang web sao cho đúng chuẩn</a></h1>
-                            <ul>
-                                <li>
-                                    <i class="fas fa-user"></i>
-                                    <a href="#" class="author">Kudo Nguyễn</a>
-                                </li>
-                                <li>
-                                    <i class="far fa-calendar-alt"></i>
-                                    <a href="#" class="time">29 Feb, 2016</a>
-                                </li>
-                                <li>
-                                    <i class="fas fa-folder-open"></i>
-                                    <a href="#" class="languge">HTML</a>
-                                </li>
-                            </ul>
-                        </header>
-                        <section>
-                            <img src="img/special-char.png" alt="">
-                            <p class="text">Giới thiệu Hẳn là ai trong chúng ta cũng đã từng sử dụng chức năng Insert Symbol của phần mềm soạn 
-                                thảo nổi tiếng MS Word để chèn các ký tự đặc biệt như &copy;, &reg;, &trade; rồi đúng không? Vậy chèn các ký tự đó 
-                                với ngôn ngữ HTML có khác
-                            </p>
-                            <a href="#" class="btn">Xem tiếp<i class="fas fa-share"></i></a>
-                        </section>
-                        <footer>
-                            <p>Chia sẻ trên: 
-                                <a href="#">
-                                    <i class="fab fa-facebook-square"></i>
-                                    Facebook
-                                </a>
-                            </p>
-                        </footer>
-                    </article>
-                </div>
-                <div class="register">
-                    <div class="email">
-                        <div class="col">
-                            <h1>ĐĂNG KÝ NHẬN BẢN TIN</h1>
-                            <p>Đăng ký để nhận email cập nhật các bài viết hằng ngày từ chúng tôi!</p>
-                            <input type="text" placeholder="Địa chỉ Email của bạn" class="email-box">
-                            <a href="#">ĐĂNG KÝ</a>
-                        </div>
-                    </div>
-                    <div class="topic">
-                        <div class="col">
-                            <h1>Chủ đề</h1>
-                            <ul>
-                                <li><a href="#">JavaScript</a></li>
-                                <li><a href="#">HTML</a></li>
-                                <li><a href="#">CSS</a></li>
-                                <li><a href="#">DOM</a></li>
-                                <li><a href="#">jQuery</a></li>
-                                <li><a href="#">SMS API</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
+        </div>
+        <br>
+        <div class="coment">
+            <div class="nd">
+            <p>Q: Cám ơn tác giả, món ăn ngon quá nhưng em nấu theo không được! ;)</p>
+            <p>A: Chúc mừng bạn!</p>
+            <br>
+            <i style="color: #6b95bd"><b>- Funny boy.</b></i>
             </div>
+        </div>
+        <br>
+        <div class="coment">
+            <div class="nd">
+            <p>Q: Tác giả ơi, bạc hà là loại rau cải gì thế?</p>
+            <p>A: Bạc là là một loại rau có hình dạng giống cây khoai môn, ở miền Bắc gọi là dọc mùng.</p>
+            <br>
+            <i style="color: #6b95bd"><b>- Guest.</b></i>
+            </div>
+        </div>
+        <hr>
+        <h2 style="color: #e67e22;"><u>LIÊN KẾT</u></h2>
+        <div class="lienket">
+            <a class="link" href="https://www.google.com/search?source=hp&ei=q7o4YLWMAY2HyAPJj4rgAQ&iflsig=AINFCbYAAAAAYDjIu88QJ0GlBOJyrh6P71A_dk4lUVck&q=c%C3%A1ch+n%E1%BA%A5u+canh+chua&oq=c%C3%A1ch+n%E1%BA%A5u+canh+chua&gs_lcp=Cgdnd3Mtd2l6EAMyAggAMgIIADICCAAyAggAMgIIADICCAAyAggAMgIIADICCAAyAggAOggIABCxAxCDAToLCAAQsQMQxwEQowI6BQgAELEDOggIABDHARCjAjoFCC4QsQM6DggAELEDEIMBEMcBEK8BOgQIABAKOggIABDHARCvAVCxxAJYrIMDYMGHA2gJcAB4AoABwAGIAckZkgEEMC4yNZgBAKABAaoBB2d3cy13aXqwAQA&sclient=gws-wiz&ved=0ahUKEwj1jdDymYfvAhWNA3IKHcmHAhwQ4dUDCAc&uact=5">Tìm kiếm các cách nấu canh chua khác</a><br>
+            <a class="link" href="#">Về trang chủ</a>
         </div>
     </div>
-    <footer class="footer">
-        <p>Copyright &copy; 2010-2016 <span class="text-footer">CiOne</span> &#124; Powered by <span class="text-footer">Ghost</span></p>
-        <p>Design by <span class="text-footer">Hardeep Asrani</span></p>
-        <br>
-        <br>
-        <hr>
-    </footer>
+    
 </body>
 </html>
